--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "azure-arm-compute": "^0.19.1",
     "azure-asm-compute": "^0.17.1",
     "azure-common": "^0.9.18",
     "body-parser": "~1.15.1",
