--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "retext-profanities": "^3.1.0",
     "retext-sentiment": "^2.0.2",
     "serve-favicon": "~2.3.0",
-    "twitter": "^1.4.0",
-    "unist-util-inspect": "^4.0.0",
-    "vfile-reporter": "^3.0.0"
+    "socket.io": "^1.5.1",
+    "socket.io-client": "^1.5.1",
+    "socket.io-stream": "^0.9.1",
+    "twitter": "^1.4.0"
   },
   "description": "Assignment 2, CAB432: Cloud Computing",
   "main": "app.js",
