- Complete data visualization.

--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
-    "azure-arm-compute": "^0.19.1",
-    "azure-asm-compute": "^0.17.1",
-    "azure-common": "^0.9.18",
+    "adal-node": "^0.1.22",
+    "azure": "^1.2.0-preview",
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "d3": "^4.2.8",
@@ -16,18 +16,19 @@
     "ejs": "~2.4.1",
     "express": "~4.13.4",
     "express-session": "^1.14.1",
-    "jsdom": "^9.8.0",
     "json-query": "^2.2.0",
+    "mongoose": "^4.6.5",
     "morgan": "~1.7.0",
+    "nlcst-to-string": "^2.0.0",
+    "nodemon": "^1.11.0",
     "retext": "^4.0.0",
     "retext-cliches": "^1.0.0",
     "retext-equality": "^2.5.0",
+    "retext-keywords": "^3.0.0",
     "retext-profanities": "^3.1.0",
     "retext-sentiment": "^2.0.2",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.5.1",
-    "socket.io-client": "^1.5.1",
-    "socket.io-stream": "^0.9.1",
     "twitter": "^1.4.0"
   },
   "description": "Assignment 2, CAB432: Cloud Computing",
