--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "adal-node": "^0.1.22",
@@ -20,7 +19,6 @@
     "mongoose": "^4.6.5",
     "morgan": "~1.7.0",
     "nlcst-to-string": "^2.0.0",
-    "nodemon": "^1.11.0",
     "retext": "^4.0.0",
     "retext-cliches": "^1.0.0",
     "retext-equality": "^2.5.0",
