- Able to store twitter stream to MongoDB. - Able to fetch data from the MongoDb

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "adal-node": "^0.1.22",
-    "azure": "^1.2.0-preview",
+    "azure": "latest",
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "d3": "^4.2.8",
@@ -17,11 +17,12 @@
     "express-session": "^1.14.1",
     "json-query": "^2.2.0",
     "mongoose": "^4.6.5",
+    "mongoose-object-stream": "0.0.2",
     "morgan": "~1.7.0",
     "nlcst-to-string": "^2.0.0",
     "retext": "^4.0.0",
-    "retext-cliches": "^1.0.0",
-    "retext-equality": "^2.5.0",
+    "retext-cliches": "latest",
+    "retext-equality": "latest",
     "retext-keywords": "^3.0.0",
     "retext-profanities": "^3.1.0",
     "retext-sentiment": "^2.0.2",
